# codex-desktop-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix  install.sh
packaging/linux/: PKGBUILD.template  codex-desktop.install  codex-desktop.spec  codex-update-manager.postinst  control
scripts/: build-pacman.sh  patch-linux-window-ui.js  patch-linux-window-ui.test.js
scripts/lib/: package-common.sh
updater/: Cargo.toml
updater/src/: app.rs  builder.rs  cli.rs  codex_cli.rs  config.rs  install.rs  logging.rs  main.rs  notify.rs  state.rs
